test/errors/circular-dependencies-three/packages/library-core/index.ts
export * from '@library-cirulcar-dependencies-three/core/src/library.module';
export * from '@library-cirulcar-dependencies-three/core/src/form-control-registry/form-control-registry.service';
